--- a/Mercurius.csproj
+++ b/Mercurius.csproj
@@ -1,6 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <Version>0.0.10</Version>
+    <VersionPrefix>0.0.10</VersionPrefix>
+    <Authors>Vivid</Version>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
