--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
         dotnet-version: ['3.0', '3.1.x', '5.0.x', '6.0' ]
 
     steps:
-      - run: cd src
+      - run: cd ./src
       - uses: actions/checkout@v3
       - name: Setup .NET Core SDK ${{ matrix.dotnet-version }}
         uses: actions/setup-dotnet@v3
