Migrated to serilog

--- a/src/Mercurius.csproj
+++ b/src/Mercurius.csproj
@@ -13,11 +13,11 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0-preview.7.22375.6" />
     <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="7.0.0-preview.7.22375.6" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="7.0.0-preview.7.22375.6" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0-preview.7.22375.6" /> 
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.0-preview.7.22375.6" /> 
-    <PackageReference Include="nlog" Version="5.0.4" />
-    <PackageReference Include="nlog.extensions.logging" Version="5.0.4" />
+    <PackageReference Include="serilog" Version="2.12.0" /> 
+    <PackageReference Include="serilog.extensions.hosting" Version="5.0.1" /> 
+    <PackageReference Include="serilog.sinks.console" Version="4.1.0" /> 
     <PackageReference Include="Tmds.DBus" Version="0.11.0" />
   </ItemGroup>
 
